Add time range bucketing attribute to APM took time latency metrics
This is similar to #135524, but adding the attribute to the took time latency metric.
That requires a bit of ceremony as the took time metric is recorded on the
coordinating node, while the time range filter is parsed on each shard. We
don't have mappings available on the coord node, which are needed to parse
dates on the coord node. Thus we need to rely on date parsing done on the
data nodes, which requires sending back the parsed value to the coord node,
performing some simple reduction on it, and adding it back to the search
response.